[package]
name = "sqlite-vfs"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Build SQLite virtual file systems (VFS) by implementing a simple Rust trait."
repository = "https://github.com/rkusa/sqlite-vfs"

[dependencies]
libsqlite3-sys = { version = "0.23", features = ["bundled"] }
log = "0.4"
rand = "0.8"
time = "0.3"

[dev-dependencies]
rusqlite = { version = "0.26", features = ["bundled"] }
