[package]
name = "test-vfs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
durable-object = { path = "../durable-object" }
log = "0.4"
pretty_env_logger = "0.4"
sqlite-vfs = { path = "../", default-features = false, features = ["sqlite_test"] }
libc = "0.2"
